fix(swagger): update swagger docs types
